TURKISH/listings/ch03-common-programming-concepts/no-listing-05-mut-cant-change-types/output.txt
cargo run
   Compiling degiskenler v0.1.0 (/home/rusdili/Masaüstü/projeler/degiskenler)
error[E0308]: mismatched types
 --> src/main.rs:4:14
  |
4 |     boşluk = boşluk.len();
  |              ^^^^^^^^^^^^ expected `&str`, found `usize`

For more information about this error, try `rustc --explain E0308`.
error: could not compile `no-listing-05-mut-cant-change-types` due to previous error

